tests/ui/simd/intrinsic/generic-arithmetic-2.stderr
error[E0511]: invalid monomorphization of `simd_add` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:69:9
   |
LL |         simd_add(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_sub` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:71:9
   |
LL |         simd_sub(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_mul` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:73:9
   |
LL |         simd_mul(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_div` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:75:9
   |
LL |         simd_div(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shl` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:77:9
   |
LL |         simd_shl(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shr` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:79:9
   |
LL |         simd_shr(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_funnel_shl` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:81:9
   |
LL |         simd_funnel_shl(0, 0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_funnel_shr` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:83:9
   |
LL |         simd_funnel_shr(0, 0, 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_and` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:85:9
   |
LL |         simd_and(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_or` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:87:9
   |
LL |         simd_or(0, 0);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_xor` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:89:9
   |
LL |         simd_xor(0, 0);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_neg` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:92:9
   |
LL |         simd_neg(0);
   |         ^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bswap` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:94:9
   |
LL |         simd_bswap(0);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bitreverse` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:96:9
   |
LL |         simd_bitreverse(0);
   |         ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ctlz` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:98:9
   |
LL |         simd_ctlz(0);
   |         ^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_cttz` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/generic-arithmetic-2.rs:100:9
   |
LL |         simd_cttz(0);
   |         ^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shl` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:103:9
   |
LL |         simd_shl(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_shr` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:105:9
   |
LL |         simd_shr(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_funnel_shl` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:107:9
   |
LL |         simd_funnel_shl(z, z, z);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_funnel_shr` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:109:9
   |
LL |         simd_funnel_shr(z, z, z);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_and` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:111:9
   |
LL |         simd_and(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_or` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:113:9
   |
LL |         simd_or(z, z);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_xor` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:115:9
   |
LL |         simd_xor(z, z);
   |         ^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bswap` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:117:9
   |
LL |         simd_bswap(z);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bitreverse` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:119:9
   |
LL |         simd_bitreverse(z);
   |         ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ctlz` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:121:9
   |
LL |         simd_ctlz(z);
   |         ^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_ctpop` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:123:9
   |
LL |         simd_ctpop(z);
   |         ^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_cttz` intrinsic: unsupported operation on `f32x4` with element `f32`
  --> $DIR/generic-arithmetic-2.rs:125:9
   |
LL |         simd_cttz(z);
   |         ^^^^^^^^^^^^

error: aborting due to 28 previous errors

For more information about this error, try `rustc --explain E0511`.
